0.2.8 (not yet released)
- :select option allows column families to be identified using symbols
- tests and groundwork for mutator flush_interval (asynchronous writes)
  - requires Hypertable 0.9.2.7
- update tests to be compatible with Rails 2.3.4
- update tests to be compatible with RSpec 1.2.8

0.2.7 2009/10/01
- new row_key_attributes method: allows parts of the row key to be extracted
  into attributes on the instantiated object
- retry block of write_cells was occasionally attemption to write to a
  closed mutator (causing an exception)
- support mutators with auto-flush
  - update Thrift-generated ruby code to code supplied in Hypertable 0.9.2.6
- some exceptions in write_cells method were being masked by exceptions in 
  ensure block, making it difficult to identify root cause of problem
- fix potential infinite loop in each_row
- handle deleted columns in schema operations
  - hypertable deletes columns lazily, so they will still show up in the output
    from schema commands.

0.2.6 2009/04/20
- fix bug interacting with new open_scanner API

0.2.5 2009/04/20
- added methods to raw ruby thrift client for iterating over large results
  - each_cell_as_arrays
  - each_row (still has bug in underlying code)
  - each_row_as_arrays (still has bug in underlying code)
- new HyperRecord methods for iterating over results in small batches, doesn't 
  exhaust memory on million-row queries
  - find_each_row (returns each row as HyperRecord object)
  - find_each_row_as_arrays (returns each row in native array format - fast)
  - find_to_scan_spec methods (converts finder options to scan spec)
  - find_with_scanner (converts finder options to a scanner)
- new finder option (:row_intervals) that retrieves cells from multiple 
  row intervals in a single query
- now depends on Thrift SVN revision 765279 or later.

0.2.4 2009/04/06
- find_by_hql support
- support for :select option in calls to ActiveRecord.find